--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,6 @@ deploy:
   provider: heroku
   api_key:
     secure: $HEROKU_API_KEY
-app: SYSC_4806_Lab5-addressbook
+app: shoana
 dist: trusty
-#NEW CHANGES 
+#NEW CHANGES
