--- a/.travis.yml
+++ b/.travis.yml
@@ -3,8 +3,7 @@ jdk:
   - oraclejdk8
 deploy:
   provider: heroku
-  api_key:
-    secure: $HEROKU_API_KEY
+  api_key: $HEROKU_API_KEY
 app: shoana
 dist: trusty
 #NEW CHANGES
